[package]
name = "actix-svr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"]}
actix-web = "4.3.0"

async-stream = "0.3.2"
env_logger = "0.10.0"
log = "0.4.17"